--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ keywords = ["pattern", "regex", "regexp"]
 
 [dependencies]
 bootloader = "0.9.8"
+env_logger = "0.10.0"
+fs_extra = "1.3.0"
+log = "0.4.19"
+notify = "6.0.1"
+toml = "0.7.6"
