--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ keywords = ["pattern", "regex", "regexp"]
 
 [dependencies]
 bootloader = "0.9.8"
+rustix = "0.38.10"
 env_logger = "0.10.0"
 fs_extra = "1.3.0"
 log = "0.4.19"
